syntax = "proto3";

package nekzabirov.igambling.v1;

option java_package = "com.nekzabirov.igambling.proto.service";
option java_multiple_files = true;

import "dto/game_variant.dto.proto";
import "dto/provider.dto.proto";
import "dto/game.dto.proto";
import "dto/aggregator.dto.proto";
import "dto/empty.result.proto";

service Sync {
  rpc AddAggregator(AddAggregatorCommand) returns (EmptyResult);

  rpc ListAggregator(ListAggregatorCommand) returns (ListAggregatorResult);

  rpc AssignGameVariant(AssignGameVariantCommand) returns (EmptyResult);

  rpc AssignProvider(AssignProviderCommand) returns (EmptyResult);

  rpc ListVariants(ListVariantsCommand) returns (ListVariantResult);
}

message AddAggregatorCommand {
  string identity = 1;

  string type = 2;

  map<string, string> config = 3;
}

message AssignGameVariantCommand {
  string variant_id = 1;

  string game_id = 2;
}

message AssignProviderCommand {
  string provider_id = 1;

  string aggregator_identity = 2;

  int32 partner_type = 3;
}

message ListVariantsCommand {
  string query = 1;

  optional string aggregator_type = 2;

  optional string game_identity = 3;

  int32 page_number = 4;

  int32 page_size = 5;
}

message ListVariantResult {
  repeated GameVariantDto items = 1;

  repeated GameDto games = 2;

  repeated ProviderDto providers = 4;

  int32 total_page = 5;
}

message ListAggregatorCommand {
  string query = 1;

  optional string type = 2;

  optional bool active = 3;

  int32 page_number = 4;

  int32 page_size = 5;
}

message ListAggregatorResult {
  repeated AggregatorDto items = 1;

  int32 total_page = 2;
}